Fix alignment and spacing issues

--- a/src/app/shared/components/cluster-summary/style.scss
+++ b/src/app/shared/components/cluster-summary/style.scss
@@ -39,6 +39,8 @@ $steps: 6;
 
 .km-wizard-summary {
   .header {
+    align-items: center;
+    display: flex;
     font-size: variables.$font-size-subhead-lg;
     margin-bottom: 16px;
   }
