--- a/src/app/shared/components/property/style.scss
+++ b/src/app/shared/components/property/style.scss
@@ -30,6 +30,7 @@
   .value {
     font-size: variables.$font-size-subhead;
     line-height: 24px;
+    margin-top: 5px;
     min-height: 24px;
     word-break: break-all;
   }
